--- a/OOTDAY/app/src/main/res/layout/main_activity.xml
+++ b/OOTDAY/app/src/main/res/layout/main_activity.xml
@@ -26,7 +26,7 @@
         app:labelVisibilityMode="unlabeled"
         app:itemIconTint="@color/brown_300"
         style="@style/BottomNavigation.IconOnly"
-        android:background="@color/gray_light"/>
+        android:background="@color/gray_400"/>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/main_fragment_container"
