--- a/OOTDAY/app/src/main/res/layout/sign_up_activity.xml
+++ b/OOTDAY/app/src/main/res/layout/sign_up_activity.xml
@@ -15,7 +15,7 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/signup_toolbar"
             android:layout_width="match_parent"
-            android:background="@color/gray_light"
+            android:background="@color/gray_400"
             android:layout_height="72sp"
             app:contentInsetStart="0dp"
             app:contentInsetStartWithNavigation="0dp"
