--- a/OOTDAY/app/src/main/res/layout/sign_up_step3.xml
+++ b/OOTDAY/app/src/main/res/layout/sign_up_step3.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray_light">
+    android:background="@color/gray_400">
 
     <TextView
         android:id="@+id/step3_title"
@@ -25,11 +25,11 @@
         android:paddingHorizontal="16sp"
         android:paddingVertical="4sp"
         android:hint="영문과 숫자를 조합해 5-10자만 입력할 수 있어요."
-        android:textColorHint="@color/gray_medium"
+        android:textColorHint="@color/gray_200"
         android:textColorHighlight="@color/brown_300"
         android:fontFamily="@font/noto_sans_kr_medium"
         android:textSize="@dimen/body_medium_size"
-        android:backgroundTint="@color/gray_medium"
+        android:backgroundTint="@color/gray_200"
         android:maxLines="1"
         android:maxLength="20"
         android:layout_marginVertical="54sp"
