refactoring & feat : 주기능1 페이지 옷장, 홈화면 레이아웃 구성 완료 및 editText 포커스 문제 해결

--- a/OOTDAY/app/src/main/res/drawable/ic_profile_default.xml
+++ b/OOTDAY/app/src/main/res/drawable/ic_profile_default.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="36">
   <path
       android:pathData="M18,0C27.941,0 36,8.059 36,18C36,27.941 27.941,36 18,36C8.059,36 0,27.941 0,18C0,8.059 8.059,0 18,0ZM17.5,20C11.5,20 6.5,23.5 6.5,25.5C7.5,27 11.425,31.5 17.5,31.5C23.5,31.5 28,27 28.5,25.5C28.5,23.567 24,20 17.5,20ZM18,6C14.686,6 12,8.686 12,12C12,15.314 14.686,18 18,18C21.314,18 24,15.314 24,12C24,8.686 21.314,6 18,6Z"
-      android:fillColor="#EBD3B9"
+      android:fillColor="@color/brown_400"
       android:fillAlpha="0.4"/>
 </vector>
