--- a/OOTDAY/app/src/main/res/layout/sign_up_step1.xml
+++ b/OOTDAY/app/src/main/res/layout/sign_up_step1.xml
@@ -27,10 +27,9 @@
         android:paddingVertical="4sp"
         android:hint="이름을 2~5자로 입력해주세요. (한글 + 영문, 조합 가능)"
         android:textColorHint="@color/gray_200"
-        android:textColorHighlight="@color/brown_300"
         android:fontFamily="@font/noto_sans_kr_medium"
         android:textSize="@dimen/body_medium_size"
-        android:backgroundTint="@color/gray_200"
+        android:backgroundTint="@color/sl_edittext_selector"
         android:maxLines="1"
         android:maxLength="5"
         android:layout_marginVertical="54sp"
