--- a/OOTDAY/app/src/main/res/layout/sign_up_step2.xml
+++ b/OOTDAY/app/src/main/res/layout/sign_up_step2.xml
@@ -27,10 +27,9 @@
         android:paddingVertical="4sp"
         android:hint="휴대폰 번호를 입력해주세요."
         android:textColorHint="@color/gray_200"
-        android:textColorHighlight="@color/brown_300"
         android:fontFamily="@font/noto_sans_kr_medium"
         android:textSize="@dimen/body_medium_size"
-        android:backgroundTint="@color/gray_200"
+        android:backgroundTint="@color/sl_edittext_selector"
         android:maxLines="1"
         android:maxLength="11"
         android:inputType="number"
