--- a/OOTDAY/app/src/main/res/layout/sign_up_step3.xml
+++ b/OOTDAY/app/src/main/res/layout/sign_up_step3.xml
@@ -26,10 +26,9 @@
         android:paddingVertical="4sp"
         android:hint="영문과 숫자를 조합해 5-10자만 입력할 수 있어요."
         android:textColorHint="@color/gray_200"
-        android:textColorHighlight="@color/brown_300"
         android:fontFamily="@font/noto_sans_kr_medium"
         android:textSize="@dimen/body_medium_size"
-        android:backgroundTint="@color/gray_200"
+        android:backgroundTint="@color/sl_edittext_selector"
         android:maxLines="1"
         android:maxLength="20"
         android:layout_marginVertical="54sp"
