--- a/OOTDAY/app/src/main/res/layout/sign_up_step4.xml
+++ b/OOTDAY/app/src/main/res/layout/sign_up_step4.xml
@@ -27,10 +27,9 @@
         android:hint="영문과 특수문자를 포함한 8-10자여야 해요."
         android:inputType="textPassword"
         android:textColorHint="@color/gray_200"
-        android:textColorHighlight="@color/brown_300"
         android:fontFamily="@font/noto_sans_kr_medium"
         android:textSize="@dimen/body_medium_size"
-        android:backgroundTint="@color/gray_200"
+        android:backgroundTint="@color/sl_edittext_selector"
         android:maxLines="1"
         android:layout_marginVertical="54sp"
         android:layout_marginHorizontal="24sp"
