--- a/OOTDAY/app/src/main/res/layout/sign_up_activity.xml
+++ b/OOTDAY/app/src/main/res/layout/sign_up_activity.xml
@@ -8,7 +8,8 @@
         android:id="@+id/app_bar_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@android:color/white" android:elevation="0dp" app:layout_constraintEnd_toEndOf="parent"
+        android:elevation="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -20,7 +21,6 @@
             app:contentInsetStart="0dp"
             app:contentInsetStartWithNavigation="0dp"
             app:layout_scrollFlags="noScroll">
-
             <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
