--- a/OOTDAY/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/OOTDAY/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/sl_home_selector"
         android:title="홈" />
 
     <item
-        android:id="@+id/navigation_feed"
+        android:id="@+id/feedFragment"
         android:icon="@drawable/sl_feed_selector"
         android:title="피드" />
 
     <item
-        android:id="@+id/navigation_profile"
+        android:id="@+id/profileFragment"
         android:icon="@drawable/sl_profile_selector"
         android:title="프로필" />
 </menu>
