--- a/OOTDAY/app/src/main/res/layout/closet_plus_item.xml
+++ b/OOTDAY/app/src/main/res/layout/closet_plus_item.xml
@@ -2,16 +2,17 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="4sp">
+    android:layout_width="115sp"
+    android:layout_height="139sp"
+    android:layout_marginBottom="5sp"
+    >
 
 
         <ImageButton
-            android:layout_width="100sp"
-            android:layout_height="121sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:src="@drawable/sl_plus_closet_selector"
-            android:background="@null"
+            android:background="@drawable/rounded_item_background"
 
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
