--- a/OOTDAY/app/src/main/res/values/dimens.xml
+++ b/OOTDAY/app/src/main/res/values/dimens.xml
@@ -14,9 +14,10 @@
 
     <!-- Body Text -->
     <dimen name="body_large_size">24sp</dimen>
+    <dimen name="body_medium_large_size">16sp</dimen>
     <dimen name="body_medium_size">14sp</dimen>
     <dimen name="body_small_size">12sp</dimen>
-    <dimen name="body_small_korean_size">12sp</dimen>
+    <dimen name="body_mega_small_size">10sp</dimen>
 
     <!-- Button Text -->
     <dimen name="button_large_size">16sp</dimen>
@@ -27,8 +28,8 @@
     <dimen name="caption_medium_size">10sp</dimen>
 
     <!-- Common Spacing -->
-    <dimen name="margin_small">8dp</dimen>
-    <dimen name="margin_medium">16dp</dimen>
+    <dimen name="margin_small">6sp</dimen>
+    <dimen name="margin_medium">10sp</dimen>
     <dimen name="margin_large">24dp</dimen>
     <dimen name="margin_extra_large">32dp</dimen>
 
