--- a/OOTDAY/app/src/main/res/values/dimens.xml
+++ b/OOTDAY/app/src/main/res/values/dimens.xml
@@ -32,6 +32,7 @@
     <dimen name="margin_medium">10sp</dimen>
     <dimen name="margin_large">24dp</dimen>
     <dimen name="margin_extra_large">32dp</dimen>
+    <dimen name="margin_bottom">70sp</dimen>
 
     <!-- Padding -->
     <dimen name="padding_small">8dp</dimen>
