--- a/OOTDAY/app/src/main/res/drawable/sl_closet_overlay_selector.xml
+++ b/OOTDAY/app/src/main/res/drawable/sl_closet_overlay_selector.xml
@@ -1,15 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_activated="true">
         <shape android:shape="rectangle">
             <solid android:color="#80000000" />
-            <corners android:radius="12dp" />
+            <corners android:radius="4sp" />
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@android:color/transparent" />
-            <corners android:radius="12dp" />
+            <corners android:radius="4sp" />
         </shape>
     </item>
 </selector>
