--- a/OOTDAY/app/src/main/res/drawable/sl_item_check_selector.xml
+++ b/OOTDAY/app/src/main/res/drawable/sl_item_check_selector.xml
@@ -1,8 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:state_pressed="true" android:drawable="@drawable/btn_item_check_pressed" />
-
+    <item android:state_activated="true" android:drawable="@drawable/btn_item_check_pressed" />
     <item android:drawable="@drawable/btn_item_check_default" />
-
 </selector>
