--- a/OOTDAY/app/src/main/res/layout/closet_plus_item.xml
+++ b/OOTDAY/app/src/main/res/layout/closet_plus_item.xml
@@ -9,6 +9,7 @@
 
 
         <ImageButton
+            android:id="@+id/plus_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/sl_plus_closet_selector"
