--- a/OOTDAY/app/src/main/res/values/styles.xml
+++ b/OOTDAY/app/src/main/res/values/styles.xml
@@ -5,4 +5,11 @@
         <item name="itemIconSize">40sp</item>
     </style>
     <!-- Headline Styles -->
+
+    <style name="BottomDialogStyle" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
 </resources>
