feat : 주기능 1 로직 구현 완 (mood,place 로직 , 결과화면 구현 완)

--- a/OOTDAY/app/src/main/res/layout/closet_mp_plus_item.xml
+++ b/OOTDAY/app/src/main/res/layout/closet_mp_plus_item.xml
@@ -3,17 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="4sp"
+    android:layout_height="34sp"
     app:cardElevation="0dp"
+    app:cardCornerRadius="12sp"
+    android:layout_margin="4sp"
     >
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:src="@drawable/sl_plus_mp_selector"
-            android:clickable="true"
-            android:focusable="true"
             />
 
 </androidx.cardview.widget.CardView>
