--- a/OOTDAY/app/src/main/res/layout/closet_mp_item.xml
+++ b/OOTDAY/app/src/main/res/layout/closet_mp_item.xml
@@ -3,9 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    app:cardElevation="0dp">
+    android:layout_height="34sp"
+    app:cardCornerRadius="12sp"
+    app:cardElevation="0dp"
+    android:layout_margin="4sp">
 
         <TextView
         android:id="@+id/mood_button_text"
@@ -13,14 +14,12 @@
         android:layout_height="wrap_content"
         android:paddingHorizontal="12sp"
         android:paddingVertical="0sp"
-        android:background="@drawable/sl_mp_button_background"
+        android:background="@drawable/sl_keyword_item_background"
         android:text="우아한"
         android:textSize="@dimen/body_small_size"
-        android:textColor="@color/font_gray"
+        android:textColor="@color/sl_keyword_text_color"
         android:fontFamily="@font/noto_sans_kr_regular"
         android:gravity="center"
-        android:clickable="true"
-        android:focusable="true"
         />
 
 </androidx.cardview.widget.CardView>
