--- a/OOTDAY/app/src/main/res/layout/first_closet_mood_fragment.xml
+++ b/OOTDAY/app/src/main/res/layout/first_closet_mood_fragment.xml
@@ -37,7 +37,7 @@
         android:layout_marginTop="10sp"
         android:layout_marginBottom="347dp"
         android:background="@drawable/rounded_background"
-        app:layout_constraintBottom_toTopOf="@+id/finish_mood_button"
+        app:layout_constraintBottom_toBottomOf="@+id/finish_mood_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mood_title_text2">
@@ -72,11 +72,13 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/mood_recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="100sp"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="10sp"
-            android:layout_marginTop="60sp"
-            android:layout_marginBottom="50sp" />
+            android:layout_marginTop="45sp"
+            android:layout_marginBottom="20sp"
+            />
     </FrameLayout>
 
     <Button
